Jun 18, 2021
  TermStatsLoaderWithFilter: fixed handling of species list (verver, molerat were missing)

Apr 29, 2021
  tuned up OBO validation script

Feb 4, 2021
  fixed OBO validation script

Jan 27, 2021
  CL,MI,SO,UBERON ontologies: updated sources (files for these ontologies did not change for 9+ months)
  security: the value of api key is now stored in an external property file api.key (not in the code)

Jan 13, 2021
  obo exporter fix: added escaping of double quote characters in term definitions
  DO loader: fixed loading of definition dbxrefs
  scripts: added script to validate OBO files against OBO spec

Dec 22, 2020
  DO QC: improved handling of xref synonyms

Aug 10, 2020
  fixed script run_stats_update_only.sh

Jul 24, 2020
  DO QC loader: better code to load definition xrefs

Jul 06, 2020
  gviewer stats: simplified code; only processing ontologies without cycles

Jul 03, 2020
  obo file creator: updated code to export term def xrefs

Jul 02, 2020
  parser: updated code to load term def xrefs

Jun 08, 2020
  obo generator: improved summary email

Apr 24, 2020
  term stats loader with filter: added calculation of term stats for cell lines

Apr 23, 2020
  term stats loader: added calculation of term stats for cell lines

Apr 15, 2020
  parser: for GO, fixed generation of Not4Curation synonyms

Apr 07, 2020
  obo-generator: vastly improved summary email

Mar 16, 2020
  gviewer stats loader: fix due to changes in rgdcore regarding primaray ref assemblies

Mar 06, 2020
  DO loader: added parsing of broad synonyms

Feb 28, 2020
  DO loader: added QC of OMIM IDs that are in DO ontology but not present in RDO

Dec 04, 2019
  added code to load CVCL ontology (cellosaurus ontology)
  removed code for unused cmdline option '-drop_synonyms'
  DO ontology: added loading of 'ICD9:' and 'ICD10:' xrefs

Nov 25, 2019
  code tune-up to load EFO ontology

Oct 18, 2019
  obo-generator: added export of subsets

Sep 30, 2019
  term stats loader: simplified code
