@@ -26,8 +26,8 @@ dependencies {
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.4'
-    compile 'org.springframework:spring-jdbc:5.3.4'
+    compile 'org.springframework:spring-beans:5.3.5'
+    compile 'org.springframework:spring-jdbc:5.3.5'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
